--- a/termite.cabal
+++ b/termite.cabal
@@ -20,6 +20,6 @@ executable termite
   -- ghc-options: -O2 -prof -prof -auto-all -rtsopts 
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.8, directory, tsl2, synthesis, debug2, cudd, util, pretty, errors, transformers, mtl, tuple, containers, filepath
+  build-depends:       base >=4.6, directory, termitetsl2, termitesynthesis, termitedebug2, termitecudd, termiteutil, pretty, errors, transformers, mtl, tuple, containers, filepath
   -- hs-source-dirs:      
   default-language:    Haskell2010
